[package]
name = "prometheus-exporter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
 
[profile.release]
opt-level = 3

[dependencies]
actix-web = "4.5.1"
prometheus-client = "0.22.2"
